chore: update crud and permission role
