# internal/dto/update_profile_dto.go
@@ -1,0 +1,5 @@
+package dto
+
+type UpdateProfileRequest struct {
+	Name string `json:"name" binding:"required,min=3,max=30"`
+}
