# internal/handlers/user/user_handler.go
@@ -5,7 +5,6 @@ import (
 	"example-go-project/internal/model"
 	userRepository "example-go-project/internal/repository/user"
 	"example-go-project/pkg/utils"
-	"fmt"
 	"net/http"
 	"os"
 	"time"
@@ -71,7 +70,7 @@ func (h *UserHandler) Login(c *gin.Context) {
     }
 
     auth := utils.NewAuthHandler(os.Getenv("JWT_SECRET"), os.Getenv("JWT_EXPIRY"))
-    token, err := auth.GenerateToken(user.ID.Hex())
+    token, err := auth.GenerateToken(user.ID.Hex(), user.Roles)
     if err != nil {
         utils.SendError(c, http.StatusInternalServerError, "Failed to generate token")
         return
@@ -126,6 +125,10 @@ func (h *UserHandler) Register(c *gin.Context) {
         return
     }
 
+    if len(req.Roles) == 0 {
+        req.Roles = []string{string(utils.UserRole)}
+    }
+
     // Create new user
     now := time.Now()
     user := &model.User{
@@ -133,6 +136,7 @@ func (h *UserHandler) Register(c *gin.Context) {
         Name:      req.Name,
         Email:     req.Email,
         Password:  string(hashedPassword),
+        Roles:     req.Roles,
         CreatedAt: now,
         UpdatedAt: now,
     }
@@ -147,6 +151,7 @@ func (h *UserHandler) Register(c *gin.Context) {
         "id":    user.ID.Hex(),
         "name":  user.Name,
         "email": user.Email,
+        "roles": user.Roles,
     }
     
     utils.SendSuccess(c, http.StatusOK, res)
@@ -161,24 +166,19 @@ func (h *UserHandler) Register(c *gin.Context) {
 // @Router /user/profile [get]
 func (h *UserHandler) GetProfile(c *gin.Context) {
     userID, _ := c.Get("userID")
-    fmt.Println(userID)
     
     ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
     defer cancel()
 
     userIDStr, ok := userID.(string)
     if !ok {
-        c.JSON(http.StatusBadRequest, gin.H{
-            "error": "invalid user ID format",
-        })
+        utils.SendError(c, http.StatusInternalServerError, "Failed to get user ID")
         return
     }
 
     user, err := h.userRepo.FindByID(ctx, userIDStr)
     if err != nil {
-        c.JSON(http.StatusInternalServerError, gin.H{
-            "error": "failed to fetch user profile",
-        })
+        utils.SendError(c, http.StatusInternalServerError, err.Error())
         return
     }
 
@@ -186,17 +186,115 @@ func (h *UserHandler) GetProfile(c *gin.Context) {
         "id":    user.ID.Hex(),
         "name":  user.Name,
         "email": user.Email,
+        "roles": user.Roles,
     }
     
     utils.SendSuccess(c, http.StatusOK, res)
 }
 
+// @Summary Update endpoint
+// @Description Get the API's update user
+// @Tags user
+// @Accept json
+// @Produce json
+// @Security Bearer
+// @Param id path string true "User ID"
+// @Param request body dto.UpdateProfileRequest true "User update details"
+// @Router /user/profile/{id} [put]
 func (h *UserHandler) UpdateProfile(c *gin.Context) {
-    // userID, _ := c.Get("userID")
-    // ... update profile logic ...
+    var req dto.UpdateProfileRequest
+    id := c.Param("id")
+
+    if err := c.ShouldBindJSON(&req); err != nil {
+        errors := utils.FormatValidationError(err)
+        if len(errors) > 0 {
+            c.JSON(http.StatusBadRequest, gin.H{
+                "error": errors,
+            })
+            return
+        }
+        
+        utils.SendError(c, http.StatusInternalServerError, err.Error())
+        return
+    }
+
+    ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
+    defer cancel()
+
+    objID, err := primitive.ObjectIDFromHex(id)
+    if err != nil {
+        utils.SendError(c, http.StatusBadRequest, "Invalid ID format")
+        return
+    }
+
+    user, err := h.userRepo.FindByID(ctx, objID.Hex())
+    if err != nil {
+        utils.SendError(c, http.StatusInternalServerError, err.Error())
+        return
+    }
+
+    now := time.Now()
+    payload := &model.User{
+        ID:        user.ID,
+        Name:      req.Name,
+        Email:     user.Email,
+        Password:  user.Password,
+        Roles:     user.Roles,
+        UpdatedAt: now,
+        CreatedAt: user.CreatedAt,
+    }
+
+    if err := h.userRepo.Update(ctx, payload); err != nil {
+        utils.SendError(c, http.StatusInternalServerError, err.Error())
+        return
+    }
+
+    res := gin.H{
+        "id":    payload.ID.Hex(),
+        "name":  payload.Name,
+        "email": payload.Email,
+        "roles": payload.Roles,
+    }
+    
+    utils.SendSuccess(c, http.StatusOK, res, "Profile updated successfully")
 }
 
+// @Summary Delete endpoint
+// @Description Get the API's delete user
+// @Tags admin
+// @Accept json
+// @Produce json
+// @Security Bearer
+// @Param id path string true "User ID"
+// @Router /user/profile/{id} [delete]
 func (h *UserHandler) DeleteUser(c *gin.Context) {
-    // userID, _ := c.Get("userID")
-    // ... delete user logic ...
+    id := c.Param("id")
+    userID, _ := c.Get("userID")
+    
+    objID, err := primitive.ObjectIDFromHex(id)
+    if err != nil {
+        utils.SendError(c, http.StatusBadRequest, "Invalid ID format")
+        return
+    }
+
+    ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
+    defer cancel()
+
+    user, err := h.userRepo.FindByID(ctx, objID.Hex())
+    if err != nil {
+        utils.SendError(c, http.StatusInternalServerError, err.Error())
+        return
+    }
+
+    if user.ID.Hex() == userID {
+        utils.SendError(c, http.StatusUnauthorized, "You cannot delete yourself")
+        return
+    }
+    
+    if err := h.userRepo.Delete(ctx, user.ID.Hex()); err != nil {
+        utils.SendError(c, http.StatusInternalServerError, err.Error())
+        return
+    }
+    
+    utils.SendSuccess(c, http.StatusOK, nil, "User deleted successfully")
 }
